*added additional comments *fixed wrong height in style.css

--- a/web/style.css
+++ b/web/style.css
@@ -83,7 +83,7 @@ html, body {
 .singleProgramDiv {
     font-size: 18px;
     width: inherit;
-    height: 160px;
+    /*height: 160px;*/
     padding-left: 50px;
     padding-right: 50px;
     margin-bottom: 50px;
